--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,7 +7,7 @@
 @import url('./reset.css');
 @import url('./vite-promo.css');
 @import url('./header.css');
-
+@import "simplelightbox/dist/simple-lightbox.min.css";
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -23,3 +23,4 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
