--- a/src/partials/index.html
+++ b/src/partials/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="//src/css/styles.css" />
   </head>
   <body>
       <ul>
-      <li><a href="1-gallery.html"><img  alt="1-gallery" src="./img/gallery-svgrepo-com.svg" height="200" width="200" class="tasc-clik"></a></a></li>
-      <li><a href="2-form.html"><img  alt="1-gallery" src="./img/iconmonstr-document-thin.svg" height="200" width="200" class="tasc-clik"></a></li>
+      <li><a href="/src/partials/1-gallery.html"><img  alt="1-gallery" src="./img/gallery-svgrepo-com.svg" height="200" width="200" class="tasc-clik"></a></a></li>
+      <li><a href="/src/partials/2-form.html"><img  alt="1-gallery" src="./img/iconmonstr-document-thin.svg" height="200" width="200" class="tasc-clik"></a></li>
     </ul>
   </body>
   
