--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,7 @@
 */
 @import url('./reset.css');
 @import url('./header.css');
-@import url("simplelightbox/dist/simple-lightbox.min.css");
+@import url("./simple-lightbox.scss");
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
