--- a/src/partials/1-gallery.html
+++ b/src/partials/1-gallery.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>''</title>
-        <link rel="stylesheet" href="css/styles.css" />
-        <link
-            rel="stylesheet"
-            href=" https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css "
-        />
-    </head>
-    <body>
-        <a href="index.html" class="return-booton">Retorn</a>
-        <ul class="gallery"></ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>''</title>
+    <link rel="stylesheet" href="../css/styles.css" />
 
-        <script src="./js/1-gallery.js" type="module"></script>
-    </body>
+  </head>
+  <body>
+    <a href="../index.html" class="return-booton">Retorn</a>
+    <ul class="gallery"></ul>
+
+    <script src="/js/1-gallery.js" type="module"></script>
+  </body>
 </html>
 <a href="" target="_parent"></a>
