--- a/src/partials/2-form.html
+++ b/src/partials/2-form.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <title>2-form</title>
   </head>
   <body>
-    <a href="index.html" class="return-booton">Retorn</a>
+    <a href="..//index.html" class="return-booton">Retorn</a>
       <form class="feedback-form" autocomplete="off">
 
           <label class="form-label">
@@ -27,6 +27,6 @@
 
       </form>
 
-    <script src="./js/2-form.js" type="module"></script>
+    <script src="/js/2-form.js" type="module"></script>
   </body>
 </html>
