--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,10 +4,12 @@
       <li class="nav-item">
         <a href="./page-2.html" class="nav-link">Page 2</a>
       </li>
+      <ul>
 
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
+      <li><a href="./1-gallery.html"><img  alt="1-gallery" src=".//img/gallery-svgrepo-com.svg" height="200" width="200" class="tasc-clik"></a></a></li>
+      <li><a href="./1-gallery.html"><img  alt="1-gallery" src="./img/iconmonstr-document-thin.svg" height="200" width="200" class="tasc-clik"></a></li>
+    </ul>
+
     </ul>
   </nav>
 </header>
