--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
       <ul>
 
       <li><a href="./1-gallery.html"><img  alt="1-gallery" src=".//img/gallery-svgrepo-com.svg" height="200" width="200" class="tasc-clik"></a></a></li>
-      <li><a href="./1-gallery.html"><img  alt="1-gallery" src="./img/iconmonstr-document-thin.svg" height="200" width="200" class="tasc-clik"></a></li>
+      <li><a href="../partials/1-gallery.html"><img  alt="1-gallery" src="./img/iconmonstr-document-thin.svg" height="200" width="200" class="tasc-clik"></a></li>
     </ul>
 
     </ul>
